fix gaps in nav

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav{
 nav ul{
 display: flex;
 justify-content: center;
-gap: 30px;
+gap: 70px;
 list-style-type: none;
 background-color: #B69858;
 font-size: 1.1em;
@@ -66,6 +66,7 @@ nav li{
 
 .submenu {
     visibility: hidden;
+    display: block;
     opacity: 0;
     position: absolute;
     background-color: #B69858;
@@ -405,15 +406,19 @@ img.linkedin{
         max-width: 100vw;
     }
 
+     nav li{
+        width: max-content;
+     }
+
     .container main, .container aside{
     margin: 10px;
     width: calc(100vw - 50px);
     }
     
     .banner-image {
-        width: 100vw; /* Full width */
+        width: 100vw;
         height: auto;
-        margin: 0; /* Remove side margin */
+        margin: 0;
     }
 
     .timeline-container{
